# fladar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  FLIGHT_RESULTS_EXPLANATION.md  LICENSE  PROJECT_EXPLANATION.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_STEWARD_SUMMARY.md  SECURITY.md  config.yaml.example  destination_finder.py  flight_results.html  flight_search.py  main.py  output_formatter.py  pyproject.toml  requirements.txt  run_tests.py  screenshot_html.py  test_api_connection.py  test_flight_search.py  test_integration.py  test_real_api.py  verify_opensource.sh
.github/: CONTRIBUTING.md  QUICK_SETUP.md  RELEASE_TEMPLATE.md  REPOSITORY_DESCRIPTION.md  TOPICS.md  description.txt
.github/workflows/: test.yml
data/: airline_names.json  airport_names.json
data/destinations_cache/: ALC_destinations.json  BCN_destinations.json  TLV_destinations.json  airport_aliases.json  flights_ALC_AMS_2025-11-20_2025-11-25_0_0_10.0.json  flights_ALC_AMS_2025-11-20_2025-11-25_0_0_8.0.json  flights_ALC_ARN_2025-11-20_2025-11-25_0_0_10.0.json  flights_ALC_ARN_2025-11-20_2025-11-25_0_0_8.0.json  flights_ALC_CPH_2025-11-20_2025-11-25_0_0_8.0.json  (+23 more)
docs/: ALTERNATIVE_DESTINATION_APIS.md  API_OPTIMIZATION.md  API_VERIFICATION.md  FLIGHT_RESULTS_EXPLANATION.md  MIGRATION_GUIDE.md  OPEN_SOURCE_CHECKLIST.md  PROJECT_EXPLANATION.md  SECURITY_CHECKLIST.md  amadeus_test_vs_production.md  api_error_analysis.md  api_usage_explanation.md  postman_examples.md
tests/: __init__.py  test_api_connection.py  test_flight_search.py  test_integration.py  test_real_api.py
