[tool.poetry]
name = "fladar"
version = "1.1.0"
description = "Flight search application for finding meeting destinations for two people"
authors = ["Igor Olikh <your.email@example.com>"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/igor-olikh/fladar"
repository = "https://github.com/igor-olikh/fladar"
keywords = ["flight", "search", "amadeus", "api", "travel", "meeting", "destination"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
amadeus = ">=10.0.0"
pyyaml = ">=6.0"
pytz = "^2024.1"
airportsdata = "*"
timezonefinder = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
